kanc/src/tests/sample_code/should_fail/single_file/type_check/wrong_number_of_case_params/expected_0_actually_1.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let foo = match Nat.o {
    o(n) => n,
    s(n) => n,
};
